# data_dynamics_dashboard

./: Data_Portal.py  Data_selection.py  Pizza_Sales.csv  README.md  dashboard_style.py  data_processing.py  forecasting.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
pages/: 1_Sales_Trends_And_Distribution.py  1_Sales_trends_and_distribution.py  2_Daily_sales_insights.py  2_Daywise_Sales_Insights.py  3_Sales_Forecast_Review.py  3_Sales_forecast_review.py  4_Sales_Patterns_And_Seasonality.py  4_Seasonal_sales_patterns.py
